# financial-team-agent

./: README.md  pyproject.toml
.github/workflows/: deploy-llamaagent.yml
src/financial_team_agent/: events.py  resources.py  workflow.py
webhook/: Dockerfile  go.mod  go.sum  main.go  models.go  monitoring.go
